# minigrep

./: Cargo.toml  output.txt  tutor
src/: lib.rs  main.rs
