[package]
name = "minigrep-pt-br-23"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Minigrep feito com base no Rust Book."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
